--- a/src/main/webapp/list.xhtml
+++ b/src/main/webapp/list.xhtml
@@ -6,10 +6,36 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
         >
 <body>
-<ui:composition>
-
-    This is panel used to display list of messages in selected folder.
-
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:a4j="http://richfaces.org/a4j"
+                xmlns:rich="http://richfaces.org/rich">
+    <h:form id="list">
+        <h:panelGrid>
+            <rich:dataScroller for="msg_list" maxPages="5"/>
+            <rich:dataTable value="#{messageController.messages}" var="message" id="msg_list" rows="10">
+                <rich:column sortBy="#{message.subject}" id="subject" sortOrder="#{messageListController.subjectOrder}">
+                    <f:facet name="header">
+                        <a4j:commandLink value="#{msg['subject']}" render="msg_list" action="#{messageListController.sortBySubject}" />
+                    </f:facet>
+                    <h:outputText value="#{message.subject}"/>
+                </rich:column>
+                <rich:column sortBy="#{message.sender}" id="sender" sortOrder="#{messageListController.senderOrder}">
+                    <f:facet name="header">
+                        <a4j:commandLink value="#{msg['sender']}" render="msg_list" action="#{messageListController.sortBySender}" />
+                    </f:facet>
+                    <h:outputText value="#{message.sender}"/>
+                </rich:column>
+                <rich:column sortBy="#{message.date}" id="send_date" sortOrder="#{messageListController.dateOrder}">
+                    <f:facet name="header">
+                        <a4j:commandLink value="#{msg['send_date']}" render="msg_list" action="#{messageListController.sortByDate}" />
+                    </f:facet>
+                    <h:outputText value="#{message.date}"/>
+                </rich:column>
+            </rich:dataTable>
+            <rich:dataScroller for="msg_list" maxPages="5"/>
+        </h:panelGrid>
+    </h:form>
 </ui:composition>
 </body>
 </html>
