--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -1,30 +1,31 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html
+        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+        >
+<body>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:a4j="http://richfaces.org/a4j"
+                xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:a4j="http://richfaces.org/a4j"
                 xmlns:rich="http://richfaces.org/rich">
-    <h:outputStylesheet>
-        .top {
-            vertical-align: top;
-            width: 50%;
-        }
-
-        .bold {
-            font-weight: bold;
-        }
-    </h:outputStylesheet>
-
-
-    <h:form>
+    <h:form id="menu">
         <rich:panel style="width:200px">
             <f:facet name="header">
-                <h:outputText value="#{msg['folders.header']}"/>
+                <h:outputText value="#{msg['folders_header']}"/>
             </f:facet>
-            <rich:tree id="tree" nodeType="#{node.type}" var="node" value="#{folderController.rootNodes}" toggleType="client">
-                <rich:treeNode type="folder">
+            <rich:tree id="tree" nodeType="#{node.type}" var="node" value="#{folderController.rootNodes}"
+                       toggleType="client" selectionType="ajax" selectionChangeListener="#{folderController.selectionChanged}">
+                <rich:treeNode type="folder" iconLeaf="resources/img/folder_leaf.png"
+                               iconCollapsed="resources/img/folder.png" iconExpanded="resources/img/folder.png"
+                               expanded="true">
                     <h:outputText value="#{node}"/>
+                    <a4j:ajax event="click" render="app-title" />
                 </rich:treeNode>
             </rich:tree>
         </rich:panel>
     </h:form>
 </ui:composition>
+</body>
+</html>
