--- a/src/main/webapp/list.xhtml
+++ b/src/main/webapp/list.xhtml
@@ -9,10 +9,10 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:a4j="http://richfaces.org/a4j"
-                xmlns:rich="http://richfaces.org/rich">
+                xmlns:rich="http://richfaces.org/rich" xmlns:attachment="http://noveogroup.com/">
     <h:form id="list">
         <h:panelGrid>
-            <rich:dataScroller for="msg_list" maxPages="5"/>
+            <rich:dataScroller for="msg_list" maxPages="5" boundaryControls="auto" fastControls="auto" style="text-align: center" />
             <rich:dataTable value="#{messageController.messages}" var="message" id="msg_list" rows="10">
                 <rich:column sortBy="#{message.subject}" id="subject" sortOrder="#{messageListController.subjectOrder}">
                     <f:facet name="header">
@@ -33,9 +33,10 @@
                     <h:outputText value="#{message.date}"/>
                 </rich:column>
             </rich:dataTable>
-            <rich:dataScroller for="msg_list" maxPages="5"/>
+            <rich:dataScroller for="msg_list" maxPages="5" boundaryControls="auto" fastControls="auto"/>
         </h:panelGrid>
     </h:form>
+    <attachment:atachment><f:verbatim>dff</f:verbatim></attachment:atachment>
 </ui:composition>
 </body>
 </html>
