--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -11,7 +11,7 @@
                 xmlns:a4j="http://richfaces.org/a4j"
                 xmlns:rich="http://richfaces.org/rich">
     <h:form id="menu">
-        <rich:panel style="width:200px">
+        <rich:panel style="width:100%">
             <f:facet name="header">
                 <h:outputText value="#{msg['folders_header']}"/>
             </f:facet>
