--- a/src/main/webapp/list.xhtml
+++ b/src/main/webapp/list.xhtml
@@ -36,7 +36,7 @@
             <rich:dataScroller for="msg_list" maxPages="5" boundaryControls="auto" fastControls="auto"/>
         </h:panelGrid>
     </h:form>
-    <attachment:atachment><f:verbatim>dff</f:verbatim></attachment:atachment>
+    <attachment:attachment><f:verbatim>dff</f:verbatim></attachment:attachment>
 </ui:composition>
 </body>
 </html>
