--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -105,7 +105,7 @@
             </ui:insert>
         </div>
 
-        <div class="ui-layout-center container">
+        <div class="ui-layout-center container border">
             <div class="inner-center container">
                 <ui:insert name="list">
                      <ui:include src="list.xhtml"/>
