--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -2,30 +2,26 @@
 <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-        >
-<body>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:a4j="http://richfaces.org/a4j"
-                xmlns:rich="http://richfaces.org/rich">
+                xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich">
     <h:form id="menu">
         <rich:panel style="width:100%">
             <f:facet name="header">
                 <h:outputText value="#{msg['folders_header']}"/>
             </f:facet>
             <rich:tree id="tree" nodeType="#{node.type}" var="node" value="#{folderController.rootNodes}"
-                       toggleType="client" selectionType="ajax" selectionChangeListener="#{folderController.selectionChanged}">
-                <rich:treeNode type="folder" iconLeaf="resources/img/folder_leaf.png"
-                               iconCollapsed="resources/img/folder.png" iconExpanded="resources/img/folder.png"
+                       toggleType="client" selectionChangeListener="#{folderController.selectionListener}">
+                <rich:treeNode type="folder" iconLeaf="#{resource['img:folder_leaf.png']}"
+                               iconCollapsed="#{resource['img:folder.png']}"
+                               iconExpanded="#{resource['img:folder.png']}"
                                expanded="true">
                     <h:outputText value="#{node}"/>
-                    <a4j:ajax event="click" render="app-title" />
+                    <a4j:ajax execute="@form" event="click" render="app-title msg_list"/>
                 </rich:treeNode>
             </rich:tree>
         </rich:panel>
     </h:form>
 </ui:composition>
-</body>
 </html>
