--- a/src/main/webapp/view.xhtml
+++ b/src/main/webapp/view.xhtml
@@ -2,14 +2,14 @@
 <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-        >
-<body>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich"
+      xmlns:h="http://java.sun.com/jsf/html">
 <ui:composition>
-
-    This is panel for selected message body.
-
+    <a4j:outputPanel id="msg_view">
+        <rich:panel header="Selected Rows:" rendered="#{not empty messageListData.selectedItem}">
+            <h:outputText value="#{messageListData.selectedItem.subject} - #{messageListData.selectedItem.body}"/>
+        </rich:panel>
+    </a4j:outputPanel>
 </ui:composition>
-</body>
 </html>
