--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -83,8 +83,8 @@
 <h:body>
     <div class="outer-north container">
         <a4j:outputPanel id="app-title">
-            <h:outputText value="#{folderController.currentSelection} - "
-                          rendered="#{folderController.currentSelection != null}"/> Mail Express
+            <h:outputText value="#{folderController.selectedFolderName} - "
+                          rendered="#{folderController.selectedFolderName != null}"/> Mail Express
         </a4j:outputPanel>
     </div>
 
